--- a/main.html
+++ b/main.html
@@ -10,7 +10,50 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post">
 
+		<lable for="#name">Name*</lable>
+			<input type="text" id="#name" name="name" required>
+
+		<label for="#email">Email*</label>
+			<input type="email" id="#email" name="email" required>
+
+		<label required>Gender*</label>
+
+		<input type="radio" id="gender_m" name="gender">
+			<lable for="gender_m">Male</lable>
+
+		<input type="radio" id="gender_f" name="gender">
+			<lable for="gender_f">Female</lable>
+
+		<lable for="#laptop">Laptop Brands:</lable>
+			<select name="laptop" id="#laptop" >
+				<option value="Apple">Apple</option>
+				<option value="Asus">Asus</option>
+				<option value="HP">HP</option>
+			</select>
+
+		<label for="#age">Age*</label>
+			<input type="number" id="#age" name="age" required>
+
+		<lable for="#dob">DOB*</lable>
+			<input type="date" id="#dob" name="dob" required>
+		
+		<lable for="#password">Password*</lable>
+			<input type="password" id="#password" name="password" required>
+
+		<lable for="#submit">Submit</lable>
+			<input type="submit" id="#submit" name="submit">
+
+		
+
+
+
+
+
+		
+
+	</form>
 </body>
 
 </html>
