--- a/main.html
+++ b/main.html
@@ -11,40 +11,46 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<form method="post">
-
+		<div>
 		<lable for="#name">Name*</lable>
-			<input type="text" id="#name" name="name" required>
-
+			<input type="text" id="#name" name="name" required><br>
+		</div>
+		<div>
 		<label for="#email">Email*</label>
-			<input type="email" id="#email" name="email" required>
-
-		<label required>Gender*</label>
+			<input type="email" id="#email" name="email" required><br>
+		</div>
+		<div>
+		<label required>Gender*</label><br>
 
 		<input type="radio" id="gender_m" name="gender">
-			<lable for="gender_m">Male</lable>
+			<lable for="gender_m">Male</lable><br>
 
 		<input type="radio" id="gender_f" name="gender">
-			<lable for="gender_f">Female</lable>
-
+			<lable for="gender_f">Female</lable><br>
+		</div>
+		<div>
 		<lable for="#laptop">Laptop Brands:</lable>
-			<select name="laptop" id="#laptop" >
+			<select name="laptop" id="#laptop" ><br>
 				<option value="Apple">Apple</option>
 				<option value="Asus">Asus</option>
 				<option value="HP">HP</option>
 			</select>
-
+		</div>
+		<div>
 		<label for="#age">Age*</label>
-			<input type="number" id="#age" name="age" required>
-
+			<input type="number" id="#age" name="age" required><br>
+		</div>
+		<div>
 		<lable for="#dob">DOB*</lable>
 			<input type="date" id="#dob" name="dob" required>
-		
+		</div>
+		<div>
 		<lable for="#password">Password*</lable>
 			<input type="password" id="#password" name="password" required>
-
-		<lable for="#submit">Submit</lable>
+		</div>
+		<div>
 			<input type="submit" id="#submit" name="submit">
-
+		</div>
 		
 
 
