--- a/main.html
+++ b/main.html
@@ -15,17 +15,20 @@
 		<lable for="name">Name*</lable>
 			<input type="text" id="name" name="name" required><br>
 		</div>
+
 		<div>
 		<label for="email">Email*</label>
 			<input type="email" id="email" name="email" required><br>
 		</div>
+
 		<div>
-		<label for=gender_m>Male</label>
+		    <label for=gender_m>Male</label>
 			<input type="radio" id=gender_m name=gender required>
 			
 			<label for=gender_f>Female</label>
 			<input type="radio" id=gender_f name=gender required>
 		</div>
+
 		<div>
 		<lable for="laptop">Laptop Brands:</lable>
 			<select name="laptop" id="laptop" ><br>
@@ -34,20 +37,25 @@
 				<option value="HP">HP</option>
 			</select>
 		</div>
+
 		<div>
 		<label for="age">Age*</label>
 			<input type="number" id="age" name="age" required><br>
 		</div>
+
 		<div>
 		<lable for="dob">DOB*</lable>
 			<input type="date" id="dob" name="dob" required>
 		</div>
+
 		<div>
 		<lable for="password">Password*</lable>
 			<input type="password" id="password" name="password" required>
 		</div>
+		
 		<div>
-			<button type="button" >Submit</button>
+			<label for="submit">Submit</label>
+			<button type="button" name="submit" >Submit</button>
 		</div>
 		
 
