--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<form method="post">
 		<div>
-		<lable for="name">Name*</lable>
+		<label for="name">Name*</label>
 			<input type="text" id="name" name="name" required><br>
 		</div>
 
