--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div>
-		<lable for="laptop">Laptop Brands:</lable>
+		<label for="laptop">Laptop Brands:</label>
 			<select name="laptop" id="laptop" ><br>
 				<option value="Apple">Apple</option>
 				<option value="Asus">Asus</option>
@@ -44,12 +44,12 @@
 		</div>
 
 		<div>
-		<lable for="dob">DOB*</lable>
+		<labelfor="dob">DOB*</label>
 			<input type="date" id="dob" name="dob" required>
 		</div>
 
 		<div>
-		<lable for="password">Password*</lable>
+		<label for="password">Password*</label>
 			<input type="password" id="password" name="password" required>
 		</div>
 		
