--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
 		
 		<div>
 			<label for="submit">Submit</label>
-			<button type="button" name="submit" >Submit</button>
+			<button type="submit" name="submit" >Submit</button>
 		</div>
 		
 
