--- a/main.html
+++ b/main.html
@@ -52,6 +52,10 @@
 		<label for="password">Password*</label>
 			<input type="password" id="password" name="password" required>
 		</div>
+		<div>
+			<label for="portfolio">URL</label>
+			<input type="url" name="portfolio" id="portfolio">
+		</div>
 		
 		<div>
 			<label for="submit">Submit</label>
